@@ -1,3 +1,7 @@
+[B]v0.1.1[/B]
+Addition of History 101 graphic and menu.
+SQL data handling for channel data.
+
 [B]v0.1.0[/B]
 Tweaks and fixes.
 Additional graphics.
